--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>
-        Hello, my name is Nélia <br />
+        Hello, my name is Nélia Fernandes <br />
         A Full Stack Developer
       </h1>
       <a href="">Find out more</a>
