--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       </main>
       <footer>
         <ul>
-          <li><a href="https://github.com/">Github</a></li>
-          <li><a href="https://www.linkedin.com/in/neliafernandes/">Linkedin</a></li>
+          <li><a href="https://github.com/" target="_blank">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/neliafernandes/" target="_blank">Linkedin</a></li>
           <li><a>Option3</a></li>
           <li><a>Option4</a></li>
         </ul>
