--- a/index.html
+++ b/index.html
@@ -3,68 +3,117 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="“viewport”"
+      content="“width-device-width,"
+      initial-scale="1.0”"
+    />
+    <!-- font import -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./styles/css/index.css" />
     <title>Nélia's Portfolio</title>
   </head>
   <body>
-    <header>
-      <h1>
-        Hello, my name is <span>Nélia Fernandes</span><br />
-        A Full Stack Developer
-      </h1>
-      <a href="">Find out more</a>
-      </header>
-      <br>
-      <main>
-        <section class="about">
-      <h2>About me</h2>
-      <div>
-      <img src="./assets/img/nf.webp" alt="Nélia's photo" width="400">
-        <p>I've been a Digital Content Manager and an Online Journalist for more than 8
-        years. Recently, I started to feel more curious about the way the
-        backoffice and the websites I write for work... AND HERE I AM!
-        <span>👩‍💻</span> <br />
-        When I'm off work, I like to do kickboxing, hiking, travel to new places,
-        photography, watch series&movies, hang out with my friends and discover a new restaurant in town. <span>&#129304;</span> </p>
-        <a href="https://www.linkedin.com/in/neliafernandes/" target=“_blank”>View resume</a>
+    <header class="header">
+      <div class="header-content">
+        <h1 class="header-title">
+          Hello, my name is <span>Nélia Fernandes</span><br />
+          A Full Stack Developer
+        </h1>
+        <a href="#about" class="button button-primary">Find out more</a>
+      </div>
+    </header>
+    <br />
+    <main>
+      <section class="about">
+        <h2>About me</h2>
+        <div class="about-content">
+          <img
+            src="./assets/img/nf.webp"
+            alt="Nélia's photo"
+            class="about-img"
+          />
+          <p>
+            I've been a Digital Content Manager and an Online Journalist for
+            more than 8 years. Recently, I started to feel more curious about
+            the behind the scenes of the backoffice and the web pages I write
+            for... AND HERE I AM! 👩‍💻 <br />
+            When I'm off work, I like to do kickboxing, hiking, travel to new
+            places, photography, watch series&movies, hang out with my friends
+            and discover a new restaurant in town. &#129304; <br />
+            <a
+              href="https://www.linkedin.com/in/neliafernandes/"
+              target="_blank"
+              >View resume</a
+            >
+          </p>
         </div>
-        <p><blockquote>"Don't comment bad code - rewrite it."</blockquote><cite>Brian Kerninghan</cite> </p>
+        <blockquote>"Don't comment bad code - rewrite it."</blockquote>
+        <cite>Brian Kerninghan</cite>
       </section>
       <section class="projects">
-      <h2>Projects</h2>
-      <article><h3>Project Title</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore, tenetur eaque delectus itaque eos reiciendis culpa exercitationem velit quos, aliquam dolore perspiciatis?</p>
-    <a href="">Source Code</a>
-    <a href="">View Project</a>  
-    <img src="./assets/img/project1.webp" alt="project" width="600" >
-    </article>
-    <article><h3>Project Title</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore, tenetur eaque delectus itaque eos reiciendis culpa exercitationem velit quos, aliquam dolore perspiciatis?</p>
-    <a href="">Source Code</a>
-    <a href="">View Project</a>  
-    <img src="./assets/img/project1.webp" alt="project" width="600" >
-    </article>
-    <article><h3>Project Title</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore, tenetur eaque delectus itaque eos reiciendis culpa exercitationem velit quos, aliquam dolore perspiciatis?</p>
-    <a href="">Source Code</a>
-    <a href="">View Project</a>  
-    <img src="./assets/img/project1.webp" alt="project" width="600" >
-    </article>
+        <h2>Projects</h2>
+        <article>
+          <h3>Project Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
+            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
+            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
+            velit quos, aliquam dolore perspiciatis?
+          </p>
+          <a href="">Source Code</a>
+          <a href="">View Project</a>
+          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        </article>
+        <article>
+          <h3>Project Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
+            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
+            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
+            velit quos, aliquam dolore perspiciatis?
+          </p>
+          <a href="">Source Code</a>
+          <a href="">View Project</a>
+          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        </article>
+        <article>
+          <h3>Project Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
+            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
+            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
+            velit quos, aliquam dolore perspiciatis?
+          </p>
+          <a href="">Source Code</a>
+          <a href="">View Project</a>
+          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        </article>
       </section>
-        <section class="contact">
-      <h2>Contact</h2>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus ea eum aut? Qui, odit commodi? Eaque nesciunt magni totam at aspernatur voluptates a illo in? Voluptas voluptatibus doloremque ab alias! <br>
-      <a href="mailto:nelia.fernandes.89@gmail.com">Let's talk</a>  
-    </section>
-      </main>
-      <footer>
-        <ul>
-          <li><a href="https://github.com/" target="_blank">Github</a></li>
-          <li><a href="https://www.linkedin.com/in/neliafernandes/" target="_blank">Linkedin</a></li>
-          <li><a>Option3</a></li>
-          <li><a>Option4</a></li>
-        </ul>
-        <p>@2022 - Portfolio Design by Nélia Fernandes</p>
-      </footer>
+      <section class="contact">
+        <h2>Contact</h2>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
+        ea eum aut? Qui, odit commodi? Eaque nesciunt magni totam at aspernatur
+        voluptates a illo in? Voluptas voluptatibus doloremque ab alias! <br />
+        <a href="mailto:nelia.fernandes.89@gmail.com">Let's talk</a>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="https://github.com/" target="_blank">Github</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/neliafernandes/" target="_blank"
+            >Linkedin</a
+          >
+        </li>
+        <li><a>Option3</a></li>
+        <li><a>Option4</a></li>
+      </ul>
+      <p>@2022 - Portfolio Design by Nélia Fernandes</p>
+    </footer>
   </body>
 </html>
