add contact and footer css

--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="“viewport”"
-      content="“width-device-width,"
-      initial-scale="1.0”"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
     <!-- font import -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- CSS only -->
 
     <link rel="stylesheet" href="./styles/css/index.css" />
+
     <title>Nélia's Portfolio</title>
   </head>
   <body>
     <header class="header">
       <div class="header-content">
         <h1 class="header-title">
-          Hello, my name is <span>Nélia Fernandes</span><br />
-          A Full Stack Developer
+          Hello, my name is <span>Nélia Fernandes</span><br />A Full Stack
+          Developer
         </h1>
-        <a href="#about" class="button button-primary">Find out more</a>
+        <a href="#about" class="button button-primary button-medium"
+          >Find out more</a
+        >
       </div>
     </header>
-    <br />
     <main>
       <section class="about">
         <h2>About me</h2>
@@ -37,83 +38,138 @@
             alt="Nélia's photo"
             class="about-img"
           />
-          <p>
-            I've been a Digital Content Manager and an Online Journalist for
-            more than 8 years. Recently, I started to feel more curious about
-            the behind the scenes of the backoffice and the web pages I write
-            for... AND HERE I AM! 👩‍💻 <br />
-            When I'm off work, I like to do kickboxing, hiking, travel to new
-            places, photography, watch series&movies, hang out with my friends
-            and discover a new restaurant in town. &#129304; <br />
-            <a
-              href="https://www.linkedin.com/in/neliafernandes/"
-              target="_blank"
+          <div class="about-description">
+            <p>
+              I've been a Digital Content Manager and an Online Journalist for
+              more than 8 years. Recently, I started to feel more curious about
+              the behind the scenes of the backoffice and the web pages I write
+              for... AND HERE I AM! <span>👩‍💻</span>
+            </p>
+            <p>
+              When I'm off work, I like to do kickboxing, hiking, travel to new
+              places, photography, watch series&movies, hang out with my friends
+              and discover a new restaurant in town. <span>&#129304;</span>
+            </p>
+            <a href="#viewresume" class="button button-secondary"
               >View resume</a
             >
-          </p>
+          </div>
         </div>
-        <blockquote>"Don't comment bad code - rewrite it."</blockquote>
-        <cite>Brian Kerninghan</cite>
+        <div class="about-quote">
+          <blockquote>Dont comment bad code - rewrite it</blockquote>
+          <cite>Brian Kernighan</cite>
+        </div>
       </section>
       <section class="projects">
         <h2>Projects</h2>
-        <article>
-          <h3>Project Title</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
-            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
-            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
-            velit quos, aliquam dolore perspiciatis?
-          </p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
-          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        <article class="projects-article">
+          <div>
+            <h3>Project Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              maiores nihil soluta ad at laborum error, quas quaerat quis!
+              Perferendis facilis pariatur libero quas neque magnam quisquam
+              optio quasi itaque
+            </p>
+            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#viewproject" class="button button-tertiary"
+              >View Project</a
+            >
+          </div>
+          <img
+            src="./assets/img/project1.webp"
+            alt="project"
+            class="project-img"
+          />
         </article>
-        <article>
-          <h3>Project Title</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
-            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
-            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
-            velit quos, aliquam dolore perspiciatis?
-          </p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
-          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        <article class="projects-article">
+          <div>
+            <h3>Project Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              maiores nihil soluta ad at laborum error, quas quaerat quis!
+              Perferendis facilis pariatur libero quas neque magnam quisquam
+              optio quasi itaque
+            </p>
+            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#viewproject" class="button button-tertiary"
+              >View Project</a
+            >
+          </div>
+          <img
+            src="./assets/img/project1.webp"
+            alt="project"
+            class="project-img"
+          />
         </article>
-        <article>
-          <h3>Project Title</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam cum
-            reprehenderit incidunt molestiae deleniti, ut explicabo. Inventore,
-            tenetur eaque delectus itaque eos reiciendis culpa exercitationem
-            velit quos, aliquam dolore perspiciatis?
-          </p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
-          <img src="./assets/img/project1.webp" alt="project" width="600" />
+        <article class="projects-article">
+          <div>
+            <h3>Project Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              maiores nihil soluta ad at laborum error, quas quaerat quis!
+              Perferendis facilis pariatur libero quas neque magnam quisquam
+              optio quasi itaque
+            </p>
+            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#viewproject" class="button button-tertiary"
+              >View Project</a
+            >
+          </div>
+          <img
+            src="./assets/img/project1.webp"
+            alt="project"
+            class="project-img"
+          />
         </article>
       </section>
       <section class="contact">
-        <h2>Contact</h2>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus
-        ea eum aut? Qui, odit commodi? Eaque nesciunt magni totam at aspernatur
-        voluptates a illo in? Voluptas voluptatibus doloremque ab alias! <br />
-        <a href="mailto:nelia.fernandes.89@gmail.com">Let's talk</a>
+        <h2 class="contact">Contact</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+          commodi laboriosam fugiat in labore, nobis officiis aut fuga rem
+          architecto porro numquam vero minus quas ipsa voluptatem dignissimos
+          aliquam magni.
+        </p>
+        <a
+          href="mailto:nelia.fernandes.89@gmail.com"
+          class="button button-secondary"
+          >Let's talk</a
+        >
       </section>
     </main>
-    <footer>
-      <ul>
-        <li><a href="https://github.com/" target="_blank">Github</a></li>
-        <li>
-          <a href="https://www.linkedin.com/in/neliafernandes/" target="_blank"
-            >Linkedin</a
-          >
-        </li>
-        <li><a>Option3</a></li>
-        <li><a>Option4</a></li>
-      </ul>
-      <p>@2022 - Portfolio Design by Nélia Fernandes</p>
+    <footer class="footer">
+      <div class="social-table">
+        <ul>
+          <li>
+            <a
+              href="https://github.com/nfernandes89"
+              class="social-link github"
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/neliafernandes"
+              class="social-link linkedin"
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/nelia.fernandes"
+              class="social-link instagram"
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/nelia.fernandes.89"
+              class="social-link facebook"
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <div class="port-design">
+        <p>@2022 - Portfolio Design by Nélia Fernandes</p>
+      </div>
     </footer>
   </body>
 </html>
