--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- font import -->
     <link
@@ -15,7 +14,8 @@
 
     <link rel="stylesheet" href="./styles/css/index.css" />
 
-    <title>Nélia's Portfolio</title>
+    <title>Nélia Fernandes Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
   </head>
   <body>
     <header class="header">
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="about-quote">
-          <blockquote>Dont comment bad code - rewrite it</blockquote>
+          <blockquote>Don't comment bad code - rewrite it</blockquote>
           <cite>Brian Kernighan</cite>
         </div>
       </section>
