create div class "projects-box"

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="projects">
         <h2>Projects</h2>
         <article class="projects-article">
-          <div>
+          <div class="projects-box">
             <h3>Project Title</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
@@ -83,7 +83,7 @@
           />
         </article>
         <article class="projects-article">
-          <div>
+          <div class="projects-box">
             <h3>Project Title</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
@@ -103,7 +103,7 @@
           />
         </article>
         <article class="projects-article">
-          <div>
+          <div class="projects-box">
             <h3>Project Title</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
