install sass and package json

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <link rel="stylesheet" href="./styles/css/index.css" />
 
+    <script src="script.js" defer></script>
+
     <title>Nélia Fernandes Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <header class="header">
@@ -125,12 +127,7 @@
       </section>
       <section class="contact">
         <h2 class="contact">Contact</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
-          commodi laboriosam fugiat in labore, nobis officiis aut fuga rem
-          architecto porro numquam vero minus quas ipsa voluptatem dignissimos
-          aliquam magni.
-        </p>
+        <p>Feel free to ask my any question!</p>
         <a
           href="mailto:nelia.fernandes.89@gmail.com"
           class="button button-secondary"
@@ -139,27 +136,26 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="social-table">
         <ul>
-          <li>
+          <li class="social-item">
             <a
               href="https://github.com/nfernandes89"
               class="social-link github"
             ></a>
           </li>
-          <li>
+          <li class="social-item">
             <a
               href="https://www.linkedin.com/in/neliafernandes"
               class="social-link linkedin"
             ></a>
           </li>
-          <li>
+          <li class="social-item">
             <a
               href="https://www.instagram.com/nelia.fernandes"
               class="social-link instagram"
             ></a>
           </li>
-          <li>
+          <li class="social-item">
             <a
               href="https://www.facebook.com/nelia.fernandes.89"
               class="social-link facebook"
@@ -167,9 +163,7 @@
           </li>
         </ul>
       </div>
-      <div class="port-design">
         <p>@2022 - Portfolio Design by Nélia Fernandes</p>
-      </div>
     </footer>
   </body>
 </html>
