--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </section>
       <section class="contact">
         <h2 class="contact">Contact</h2>
-        <p>Feel free to ask my any question!</p>
+        <p>If you have any questions, please feel free to ask.</p>
         <a
           href="mailto:nelia.fernandes.89@gmail.com"
           class="button button-secondary"
