--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </article>
       </section>
       <section class="contact">
-        <h2 class="contact">Contact</h2>
+        <h2>Contact</h2>
         <p>If you have any questions, please feel free to ask.</p>
         <a
           href="mailto:nelia.fernandes.89@gmail.com"
