delete _styles.scss file

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img
             src="./assets/img/project1.webp"
             alt="project"
-            class="project-img"
+            class="projects-img"
           />
         </article>
         <article class="projects-article">
@@ -101,7 +101,7 @@
           <img
             src="./assets/img/project1.webp"
             alt="project"
-            class="project-img"
+            class="projects-img"
           />
         </article>
         <article class="projects-article">
@@ -121,7 +121,7 @@
           <img
             src="./assets/img/project1.webp"
             alt="project"
-            class="project-img"
+            class="projects-img"
           />
         </article>
       </section>
