add target to social-links

--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
               the behind the scenes of the backoffice and the web pages I write
               for... AND HERE I AM! <span>👩‍💻</span>
             </p>
-            <p>
-              When I'm off work, I like to do kickboxing, hiking, travel to new
-              places, photography, watch series&movies, hang out with my friends
-              and discover a new restaurant in town. <span>&#129304;</span>
+            <p> I decided to bet on myself and take a step forward and, on September 2022, I started the Full Stack Web Development course at EDIT. 
+              
+              <span>&#129304;</span>
             </p>
-            <a href="#viewresume" class="button button-secondary"
+            <a href="#projects" class="button button-secondary"
               >View resume</a
             >
           </div>
@@ -145,19 +144,19 @@
           </li>
           <li class="social-item">
             <a
-              href="https://www.linkedin.com/in/neliafernandes"
+              href="https://www.linkedin.com/in/neliafernandes" target="_blank"
               class="social-link linkedin"
             ></a>
           </li>
           <li class="social-item">
             <a
-              href="https://www.instagram.com/nelia.fernandes"
+              href="https://www.instagram.com/nelia.fernandes" target="_blank"
               class="social-link instagram"
             ></a>
           </li>
           <li class="social-item">
             <a
-              href="https://www.facebook.com/nelia.fernandes.89"
+              href="https://www.facebook.com/nelia.fernandes.89" target="_blank"
               class="social-link facebook"
             ></a>
           </li>
