create _reset.css and change text "About me"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               the behind the scenes of the backoffice and the web pages I write
               for... AND HERE I AM! <span>👩‍💻</span>
             </p>
-            <p> I decided to bet on myself and take a step forward and, on September 2022, I started the Full Stack Web Development course at EDIT. 
+            <p> I decided to learn programming and, on September 2022, I started the Full Stack Web Development course at EDIT. 
               
               <span>&#129304;</span>
             </p>
