--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           Developer
         </h1>
         <a href="#about" class="button button-primary button-medium"
-          >Find out more</a
+          ><span>&#60;</span>Find out more<span>&#62;</span></a
         >
       </div>
     </header>
     <main>
-      <section class="about">
+      <section class="about" id="about">
         <h2>About me</h2>
         <div class="about-content">
           <img
@@ -43,25 +43,24 @@
           <div class="about-description">
             <p>
               I've been a Digital Content Manager and an Online Journalist for
-              more than 8 years. Recently, I started to feel more curious about
+              more than 8 years. I started to feel more curious about
               the behind the scenes of the backoffice and the web pages I write
-              for... AND HERE I AM! <span>👩‍💻</span>
+              for... AND HERE I AM! On September 2022, I decided to learn programming at EDIT. <span>👩‍💻</span>
             </p>
-            <p> I decided to learn programming and, on September 2022, I started the Full Stack Web Development course at EDIT. 
-              
-              <span>&#129304;</span>
+            <p>
+              When I'm off work, I like to do kickboxing, hiking, travel to new places, photography, watch series&movies, hang out with my friends and discover a new restaurant in town. <span>&#129304;</span>
             </p>
             <a href="#projects" class="button button-secondary"
-              >View resume</a
+              ><span>&#60;</span>View resume<span>&#62;</span></a
             >
           </div>
         </div>
         <div class="about-quote">
-          <blockquote>Don't comment bad code - rewrite it</blockquote>
-          <cite>Brian Kernighan</cite>
+          <blockquote>"Don't comment bad code - rewrite it"</blockquote>
+          <cite>by Brian Kernighan</cite>
         </div>
       </section>
-      <section class="projects">
+      <section class="projects" id="projects">
         <h2>Projects</h2>
         <article class="projects-article">
           <div class="projects-box">
@@ -72,9 +71,9 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
             <a href="#viewproject" class="button button-tertiary"
-              >View Project</a
+              ><span>&#60;</span>View Project<span>&#62;</span></a
             >
           </div>
           <img
@@ -92,9 +91,9 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
             <a href="#viewproject" class="button button-tertiary"
-              >View Project</a
+              ><span>&#60;</span>View Project<span>&#62;</span></a
             >
           </div>
           <img
@@ -112,9 +111,9 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-            <a href="#sourcecode" class="button button-primary">Source Code</a>
+            <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
             <a href="#viewproject" class="button button-tertiary"
-              >View Project</a
+              ><span>&#60;</span>View Project<span>&#62;</span></a
             >
           </div>
           <img
@@ -126,11 +125,11 @@
       </section>
       <section class="contact">
         <h2>Contact</h2>
-        <p>If you have any questions, please feel free to ask.</p>
+        <p>If you have any questions, please feel free to ask <span>&#128071;</span></p>
         <a
           href="mailto:nelia.fernandes.89@gmail.com"
           class="button button-secondary"
-          >Let's talk</a
+          ><span>&#60;</span>Let's talk<span>&#62;</span></a
         >
       </section>
     </main>
