--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             class="projects-img"
           />
         </article>
+        <div class="polygon-after"></div>
       </section>
       <section class="contact">
         <h2>Contact</h2>
