final changes of polygon

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             class="projects-img"
           />
         </article>
-        <div class="polygon-after"></div>
+        <div class="second-polygon"></div>
       </section>
       <section class="contact">
         <h2>Contact</h2>
