edit second polygon

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!-- font import -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- CSS only -->
-
     <link rel="stylesheet" href="./styles/css/index.css" />
-
+    <!-- Javascript -->
     <script src="script.js" defer></script>
 
     <title>Nélia Fernandes Portfolio</title>
@@ -48,9 +46,9 @@
               for... AND HERE I AM! On September 2022, I decided to learn programming at EDIT. <span>👩‍💻</span>
             </p>
             <p>
-              When I'm off work, I like to do kickboxing, hiking, travel to new places, photography, watch series&movies, hang out with my friends and discover a new restaurant in town. <span>&#129304;</span>
+              When I'm off work, I like to do kickboxing, hiking, travel to new places, photography, watch series and movies, hang out with my friends and discover a new restaurant in town. <span>&#129304;</span>
             </p>
-            <a href="#projects" class="button button-secondary"
+            <a href="" class="button button-secondary"
               ><span>&#60;</span>View resume<span>&#62;</span></a
             >
           </div>
@@ -60,7 +58,7 @@
           <cite>by Brian Kernighan</cite>
         </div>
       </section>
-      <section class="projects" id="projects">
+      <section class="projects">
         <h2>Projects</h2>
         <article class="projects-article">
           <div class="projects-box">
@@ -71,8 +69,8 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-              <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
-              <a href="#viewproject" class="button button-tertiary"
+              <a href="" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
+              <a href="" class="button button-tertiary"
                 ><span>&#60;</span>View Project<span>&#62;</span></a
               >
           </div>
@@ -91,8 +89,8 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-            <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
-            <a href="#viewproject" class="button button-tertiary"
+            <a href="" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
+            <a href="" class="button button-tertiary"
               ><span>&#60;</span>View Project<span>&#62;</span></a
             >
           </div>
@@ -111,8 +109,8 @@
               Perferendis facilis pariatur libero quas neque magnam quisquam
               optio quasi itaque
             </p>
-            <a href="#sourcecode" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
-            <a href="#viewproject" class="button button-tertiary"
+            <a href="" class="button button-primary"><span>&#60;</span>Source Code<span>&#62;</span></a>
+            <a href="" class="button button-tertiary"
               ><span>&#60;</span>View Project<span>&#62;</span></a
             >
           </div>
@@ -122,7 +120,6 @@
             class="projects-img"
           />
         </article>
-        <div class="second-polygon"></div>
       </section>
       <section class="contact">
         <h2>Contact</h2>
@@ -138,8 +135,7 @@
         <ul>
           <li class="social-item">
             <a
-              href="https://github.com/nfernandes89"
-              class="social-link github"
+              href="https://github.com/nfernandes89" target="_blank" class="social-link github"
             ></a>
           </li>
           <li class="social-item">
