--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon-nfp.ico">
     <!-- font import -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
@@ -13,9 +15,7 @@
     <link rel="stylesheet" href="./styles/css/index.css" />
     <!-- Javascript -->
     <script src="script.js" defer></script>
-
     <title>Nélia Fernandes Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <header class="header">
